Hare Krishna Changes Made with the bell sound

--- a/hanuman_chalisa.html
+++ b/hanuman_chalisa.html
@@ -136,7 +136,7 @@
             <p>Ram Lakhan Sita Sahit, Hriday Basahu Sur Bhoop.</p>
             </div>
 
-        <audio id="bellSound" src="bell_sound.wav" preload="auto"></audio>
+        <audio id="bellSound" src="sound.mp3" preload="auto"></audio>
     </main>
 
     <script src="hanuman_chalisa.js"></script>
