--- a/jaap_counter.html
+++ b/jaap_counter.html
@@ -36,7 +36,7 @@
                 <p>Time: <span id="timeDisplay">0</span></p>
                 <button id="tapToCount">Tap to Count</button>
             </div>
-            <audio id="bellSound" src="bell_sound.wav" preload="auto"></audio>
+            <audio id="bellSound" src="sound.mp3" preload="auto"></audio>
         </div>
     </main>
 
