--- a/jaap_counter.html
+++ b/jaap_counter.html
@@ -41,7 +41,7 @@
                 <p>Current Count: <span id="currentCount">0</span></p>
                 <p>Time: <span id="timeDisplay">0</span></p>
                 <button id="tapToCount" class="hidden">Tap to Count</button> </div>
-            <audio id="bellSound" src="bell_sound.wav" preload="auto"></audio>
+            <audio id="bellSound" src="sound.mp3" preload="auto"></audio>
         </div>
     </main>
 
